--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="synopsis">synopsis</string>
     <string name="reviews">Reviews:</string>
     <string name="movie_title">Movie Title</string>
+    <string name="author">author</string>
+    <string name="review">review</string>
 </resources>
