--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="favorites">Favorites</string>
     <string name="sort_by">Sort By</string>
     <string name="settings">Settings</string>
-    <string name="title_activity_detail">Movie Details</string>
+    <string name="title_activity_detail">""</string>
     <string name="videos">Videos:</string>
     <string name="more">More</string>
     <string name="less">Less</string>
